test/compile-fail/resolution/pub/in-leading-colon/top.rhdl
pub(in ::b) struct a {}
